[package]
name = "tx-sitter-client"
version = "1.0.3"
edition = "2021"
publish = true
description = "tx-sitter rust client"
license = "MIT"
documentation = ""
homepage = ""
repository = "https://github.com/karankurbur/tx-sitter-client-rust"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
ethers = { version = "2.0", git = "https://github.com/gakonst/ethers-rs", features = [ "ws", "ipc", "abigen" ] }

reqwest = {version = "0.11.14", features = ["rustls-tls"], default-features = false}
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tracing = "0.1.37"
anyhow = "1.0"
hyper = { version = "^0.14.17", features = ["server", "tcp", "http1", "http2"] }
tokio = { version = "1.17", features = ["full"] }
thiserror = "1.0.39"
url = "2.3.1"
aws-sdk-lambda = "0.30.0"
aws-config = "0.56.1"
eyre = "0.6.8"
async-trait = "0.1.73"
aws-smithy-http = "0.56.1"
aws-smithy-runtime-api = "0.56.1"


[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
